Update css to prevent overlap of nav bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
 
 body {
     font-family: var(--primary-font);
-    padding-top: 57.15px;
+    padding-top: 57.15px; /* Padding to remove overlay of nav bar */
 }
 
 h1,
@@ -39,8 +39,7 @@ h2 {
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    padding-top: 4rem; /* prevent nav bar overlap */
 }
 
 /* Buttons */
